# find-me-a-job

./: .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: backend-tests.yml  frontend-tests.yml  ui-tests.yml
agents/: agent_tools.py  graph.py  sample.py
apps/api/: pyproject.toml
apps/api/tests/backend/: test_db.py
apps/web/: jest.config.js  jest.polyfills.js  package.json
apps/web/app/: page.tsx
apps/web/features/chat/: types.ts
apps/web/features/chat/components/: ChatHeader.tsx  Composer.tsx  ConversationsSidebar.tsx  CreateAgentModal.tsx  EditAgentModal.tsx  MarkdownRenderer.tsx  ResearchPanel.tsx
apps/web/features/chat/components/__tests__/: ChatPage.test.tsx  CreateAgentModal.test.tsx  EditAgentModal.test.tsx  MarkdownRenderer.test.tsx
apps/web/features/chat/hooks/: useResearch.ts
apps/web/features/chat/hooks/__tests__/: useAgents.test.tsx  useChat.test.tsx
apps/web/features/chat/services/: agentService.ts
apps/web/features/chat/services/__tests__/: chatService.test.ts
backend/: app.py  background.py  chroma_client.py  db.py
docs/: async_tools.md  database.md  frontend.md  guidelines.md  milestones.md  product.md  use_cases.md
docs/milestones/: milestone_01.md  milestone_02.md  milestone_03.md  milestone_04.md  milestone_05.md  milestone_06.md
frontend/: jest.config.js  next.config.ts  package.json
frontend/app/: page.tsx
frontend/app/__tests__/: page.test.tsx
frontend/features/chat/: types.ts
frontend/features/chat/components/: ChatPage.tsx  ConversationsSidebar.tsx  CreateAgentModal.tsx  DetailsPanel.tsx  Drawer.tsx  MarkdownRenderer.tsx  MessageBubble.tsx
frontend/features/chat/components/__tests__/: ChatHeader.test.tsx  ChatPage.test.tsx  Composer.test.tsx  ConversationsSidebar.test.tsx  DetailsPanel.test.tsx  Drawer.test.tsx  MarkdownRenderer.test.tsx  MessageBubble.test.tsx
frontend/features/chat/hooks/: useAgents.ts  useChat.ts  useConversations.ts
frontend/features/chat/hooks/__tests__/: useChat.test.tsx
frontend/features/chat/services/: agentService.ts  chatService.ts  conversationService.ts  researchService.ts
frontend/features/chat/services/__tests__/: agentService.test.ts  chatService.test.ts
server/: app.py
sql/: 0001_init.sql  0002_research_and_jobs.sql
tests/agents/: test_graph.py
tests/backend/: test_app.py  test_db.py
tests/server/: test_app.py
ui/: next.config.ts  package-lock.json  package.json
ui/app/: page.tsx
ui/app/__tests__/: page.test.tsx
